--- a/style/style.css
+++ b/style/style.css
@@ -1,12 +1,61 @@
+html{
+  scroll-behavior: smooth;
+}
 body {
   background-color: #1a1a1a;
 }
 .title {
-  font-family:  Smooch Sans;
   font-size: 5em;
-  text-align:  center;
-  text-emphasis-color: red;
   color: #00664b;
   text-shadow: 2px 2px black;
-  text
+}
+.Text{
+  text-align: center;
+  color: lightgrey;
+  text-shadow: 1px 1px black;
+}
+.test{
+  font-size: 3em;
+  color: grey;
+  text-align: center;
+  text-shadow: 1px 1px black;
+}
+.footer{
+  text-align: right;
+}
+#top{
+    font-family:  Smooch Sans;
+    text-align:  center;
+}
+a#top{
+  padding: 2px;
+  color: lightgrey;
+  text-decoration: none;
+  font-size: 2em;
+  border-style: none;
+  border-radius: 10px;
+  border-color: lightgrey;
+  background-color: rgba(38, 38, 38, 0.5);
+}
+.drum{
+  color: lightgrey;
+  width: 100%;
+  height: 10em;
+  background-color: rgba(0, 0, 0, 0.3);
+  border-style: solid;
+  border-radius: 10px;
+  border-color: lightgrey;
+}
+.drum-1, .drum-2, .drum-3, .drum-4, .drum-5, .drum-6, .drum-7, .drum-8, .drum-9{
+  float: left;
+     width: 15%;
+     margin-right: 2%;
+     padding: 20px;
+     box-sizing: border-box;
+}
+.drum-3, .drum-6, .drum-9{
+  margin-right: 25%;
+}
+.drum-1, .drum-4, .drum-7{
+  margin-left: 25%;
 }
