--- a/style/style.css
+++ b/style/style.css
@@ -9,12 +9,51 @@ body {
   color: #00664b;
   text-shadow: 2px 2px black;
 }
-.Text{
-  text-align: center;
+.dropdownbutton{
+  font-size: 2em;
   color: lightgrey;
   text-shadow: 1px 1px black;
+  border-radius: 5px;
+  border-style: none;
+  background-color: rgba(255, 255, 255, 0.3);
 }
-.test{
+.dropdown{
+  position: relative;
+  display: inline-block;
+}
+.dropdown-content{
+  display: none;
+  position: absolute;
+  text-shadow: 1px 1px black;
+  z-index: 1;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  min-width: 100%;
+  overflow: auto;
+}
+.dropdown-content a{
+  color: black;
+  text-shadow: 1px 1px lightgrey;
+  font-family: Smooch sans;
+  font-size: 1.5em;
+  text-decoration: none;
+  display: block;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+.dropdown-content a:hover {
+  color: white;
+  text-shadow: 1px 1px black;
+  background-color: rgba(255, 255, 255, 0.3);
+}
+.dropdown:hover .dropdown-content{
+  display: block;
+}
+.dropdown:hover .dropdownbutton{
+  color: #1a1a1a;
+  text-shadow: 1px 1px white;
+  background-color: rgba(255, 255, 255, 0.6);
+  border-radius: 5px 5px 0px 0px;
+}
+.text{
   font-size: 3em;
   color: grey;
   text-align: center;
@@ -27,7 +66,7 @@ body {
     font-family:  Smooch Sans;
     text-align:  center;
 }
-a#top{
+a#top-button{
   padding: 2px;
   color: lightgrey;
   text-decoration: none;
@@ -35,13 +74,24 @@ a#top{
   border-style: none;
   border-radius: 10px;
   border-color: lightgrey;
-  background-color: rgba(38, 38, 38, 0.5);
+  background-color: rgba(0, 0, 0, 0.3);
+  font-family:  Smooch Sans;
+  text-align:  center;
 }
 .drum{
   color: lightgrey;
   width: 100%;
   height: 10em;
   background-color: rgba(0, 0, 0, 0.3);
+  border-style: solid;
+  border-radius: 10px;
+  border-color: lightgrey;
+}
+.drum:hover{
+  color: lightgrey;
+  width: 100%;
+  height: 10em;
+  background-color: rgba(255, 255, 255, 0.5);
   border-style: solid;
   border-radius: 10px;
   border-color: lightgrey;
@@ -58,4 +108,7 @@ a#top{
 }
 .drum-1, .drum-4, .drum-7{
   margin-left: 25%;
+}
+button{
+  cursor: pointer;
 }
