--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,6 @@
 html{
   scroll-behavior: smooth;
+  background-color: #1a1a1a;
 }
 body {
   background-color: #1a1a1a;
@@ -17,9 +18,11 @@ body {
   border-radius: 5px;
   border-style: none;
   background-color: rgba(255, 255, 255, 0.3);
-    transition: 1s;
+    transition: .5s;
 }
 .dropdown{
+  margin-left: 40%;
+  width: 20%;
   position: relative;
   display: inline-block;
 }
@@ -33,7 +36,7 @@ body {
   min-width: 100%;
   overflow: auto;
   border-radius: 0px 0px 5px 5px;
-  transition: 1s;
+  transition: .5s;
 }
 .dropdown-content a{
   color: black;
@@ -53,14 +56,14 @@ body {
   visibility:visible;
   opacity: 100;
   border-radius: 0px 0px 5px 5px;
-  transition:1s;
+  transition: .5s;
 }
 .dropdown:hover .dropdownbutton{
   color: #1a1a1a;
   text-shadow: 1px 1px white;
   background-color: rgba(255, 255, 255, 0.6);
   border-radius: 5px 5px 0px 0px;
-    transition: 1s;
+    transition: .5s;
 }
 .text{
   font-size: 3em;
@@ -132,4 +135,18 @@ button{
 }
 button:active{
   cursor:crosshair;
+}
+.start-stop{
+  margin: auto;
+  width: 70%;
+}
+.loop-start-button{
+  margin: auto;
+  width: 10%;
+  background-image: -webkit-linear-gradient(#00ff00,#006600);
+}
+.loop-pause-button{
+  margin: auto;
+  width: 10%;
+  background-image: -webkit-linear-gradient(#ff0000,#660000);
 }
